ircv3_parse_derive/tests/ui/fail/02_unsupported_data_fail.stderr
error: FromMessage only supports structs
 --> tests/ui/fail/02_unsupported_data_fail.rs:4:6
  |
4 | enum M1 {
  |      ^^

error: field must have at least one IRC extraction attribute
 --> tests/ui/fail/02_unsupported_data_fail.rs:9:11
  |
9 | struct M2(String);
  |           ^^^^^^

error: FromMessage does not support unit structs
  --> tests/ui/fail/02_unsupported_data_fail.rs:12:8
   |
12 | struct M3;
   |        ^^
